# AI-OS

./: .gitattributes  .gitignore  LICENSE  LICENSE_SUMMARY.md  NOTICE  README.md  REFERENCES.md  analyze_training_data.py  check_hf_cache.py  check_optimizer_status.py  checklist.txt  download_1tb_datasets.py  download_datasets_now.py  download_datasets_robust.py  download_english_and_code_datasets.py  download_full_datasets.py  download_realistic_datasets.py  download_working_datasets.py  extend_position_embeddings.py  extract_info.py  gui_state.json  gui_state.json.bak2  import_and_inspect.py  launcher.bat  logging.yaml  mkdocs.yml  profile_components.py  profile_detailed_imports.py  profile_gui_imports.py  pyproject.toml  recover_skeleton.py  restore_files.py  restore_from_vscode.py  restore_from_vscode_final.py  ruff.toml  run_optimization_direct.py  setup_datasets.py  test_4column_layout.py  test_8bit_optimizer_verification.py  test_actv1_inference.py  (+45 more)
.github/: SECURITY_CHECKLIST.md  dependabot.yml
config/: adaptive_lr.toml.example  adaptive_lr.yaml.example  adaptive_lr_profiles.json  deepspeed_zero1.json  deepspeed_zero2.json  deepspeed_zero3.json  default.yaml  mcp_servers.json  moe_example_config.py  presidio.yaml.example  tool_permissions.json
docs/: DATASET_SIZE_DETECTION_FIX.md  DATASET_VALIDATION_SYSTEM.md  DOWNLOAD_PROGRESS_FIX.md  GITHUB_SECRETS_SETUP.md  LAUNCHPAD_SETUP.md  LICENSE.md  README.md  REFERENCES.md  index.md  search_index.json  todo_installer_plan.md
examples/: auto_training_demo.py
installers/: README.md  requirements-lock.txt
scripts/: analyze_dataset_tracking.py  check_docs_links.py  check_training_data_variety.py  cleanup_optimization.py  comprehensive_diagnostics.py  debug_failing_tokenizers.py  debug_vocab_size.py  download_tokenizer.py  example_chunked_training.py  generate_api_reference.py  install_aios_on_windows.ps1  mcp_quickstart.py  profile_gui_responsiveness.py  simple_ddp_launcher.py  test_all_model_variations.py  test_bug002_dataset_timeout.py  test_bug003_ddp_multigpu.py  (+19 more)
(+704 files in other folders)
